# Suivi_de_crise

./: .gitignore  README.md  pyproject.toml
crise_viz/: __init__.py  __main__.py
src/: __init__.py
src/crise_viz/: __init__.py  aggregation.py  cli.py  config.py  geo.py  ingestion.py  normalization.py  rendering.py
src/crise_viz/assets/geo/: contours_administratifs_dataset.json
src/crise_viz/templates/: dashboard.html.j2
tests/: test_dashboard.py
